[package]
name = "yamd"
description = "Yet Another Markdown Document (flavour)"
version = "0.14.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lurk/yamd"
readme = "README.md"
keywords = ["markdown", "parser"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = "0.5.1"

# for -Zminimal-versions
[target.'cfg(any())'.dependencies]
# Force criterion to pull in regex 1.6 instead of 1.5 during minimal version CI;
# otherwise compilation fails with...
# ```
# error[E0433]: failed to resolve: use of undeclared crate or module `syntax`
#  --> <$HOME>/.cargo/registry/src/github.com-1ecc6299db9ec823/regex-1.5.0/src/literal/mod.rs:9:9
#   |
# 9 |     use syntax::hir::literal::Literals;
#   |         ^^^^^^ use of undeclared crate or module `syntax`
# ```
# Forcing >= 1.5.1 would be enough to solve this issue, but since regex 1.6.0
# supports our minimum supported rust version of 1.59.0, regex 1.6.x is fine
regex = { version = "1.6", default-features = false, optional = true }

[lib]
bench = false # due to https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options 

[[bench]]
name = "throughput"
harness = false
