[package]
name = "yamd"
description = "Yet Another Markdown Document (flavour)"
version = "0.16.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lurk/yamd"
readme = "README.md"
keywords = ["markdown", "parser"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = "0.7.0"

[features]
serde = ["dep:serde"]

[lib]
bench = false # due to https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options 

[[bench]]
name = "throughput"
harness = false
