[package]
name = "yamd"
description = "Yet Another Markdown Document (flavour)"
version = "0.18.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lurk/yamd"
readme = "README.md"
keywords = ["markdown", "parser"]
rust-version = "1.87"

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = "0.8.2"
proptest = "1"

[features]
serde = ["dep:serde"]

[lib]
bench = false # due to https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options 

[[bench]]
name = "throughput"
harness = false
